Improve CNs of intermediate CAs

--- a/etc/mtls-ca.conf
+++ b/etc/mtls-ca.conf
@@ -25,7 +25,7 @@ req_extensions          = ca_reqext             # Desired extensions
 [ ca_dn ]
 organizationName        = "Simple Inc"
 organizationalUnitName  = "Authentication & Access Control"
-commonName              = "mTLS CA"
+commonName              = "Simple Inc mTLS CA"
 
 [ ca_reqext ]
 keyUsage                = critical,keyCertSign,cRLSign
