--- a/etc/signing-ca.conf
+++ b/etc/signing-ca.conf
@@ -24,7 +24,7 @@ req_extensions          = ca_reqext             # Desired extensions
 
 [ ca_dn ]
 organizationName        = "Simple Inc"
-commonName              = "Simple Signing CA"
+commonName              = "Simple Inc Signing CA"
 
 [ ca_reqext ]
 keyUsage                = critical,keyCertSign,cRLSign
