Change commonName of root-ca so that set_organization_name applies to it

--- a/etc/root-ca.conf
+++ b/etc/root-ca.conf
@@ -24,7 +24,7 @@ req_extensions          = ca_reqext             # Desired extensions
 
 [ ca_dn ]
 organizationName        = "Simple Inc"
-commonName              = "Simple Root CA"
+commonName              = "Simple Inc Root CA"
 
 [ ca_reqext ]
 keyUsage                = critical,keyCertSign,cRLSign
