Set organizationalUnit for signing CA

--- a/etc/signing-ca.conf
+++ b/etc/signing-ca.conf
@@ -24,6 +24,7 @@ req_extensions          = ca_reqext             # Desired extensions
 
 [ ca_dn ]
 organizationName        = "Simple Inc"
+organizationalUnitName  = "Server Authentication & Mail Protection"
 commonName              = "Simple Inc Signing CA"
 
 [ ca_reqext ]
